python/testData/quickFixes/PyTypeHintsQuickFixTest/parenthesesAndTyping.py
from typing import Union

def a(b: <error descr="Generics should be specified through square brackets">Union<caret>(int, str)</error>):
    pass